--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   font-weight: 400;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
@@ -95,7 +95,7 @@ a {
 .section-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1, 17;
+  line-height: 1.17;
   color: var(--primary-text-color);
 }
 
