--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   --accent-color: #18a0fb;
 }
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
