--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ a {
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19;
   color: var(--accent-color);
 }
 .logo > .logo-half-header {
@@ -82,7 +82,7 @@ a {
 .portfolio-card-title {
   font-weight: 700;
   font-size: 18px;
-  line-height: 2.25px;
+  line-height: 2.25;
   letter-spacing: 0.06em;
   color: var(--primary-text-color);
 }
