--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ a {
   color: var(--secondary-text-color);
 }
 .footer-contact-link {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.17;
   letter-spacing: 0.02em;
@@ -145,6 +145,7 @@ a {
   background-color: var(--tertiary-bg-color);
 }
 .our-team-card-title {
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.19;
   color: var(--primary-text-color);
